--- a/index.html
+++ b/index.html
@@ -214,4 +214,217 @@ title: Home
 }
 
 .contact-value a:hover {
-  text-decor
+  text-decoration: underline;
+}
+</style>
+
+<div class="portfolio">
+  <!-- HERO -->
+  <section class="hero" id="top">
+    <div class="hero-eyebrow">Portfolio</div>
+    <h1 class="hero-title">
+      James Sacharanski · <span>Security-minded IT & aspiring pentester</span>
+    </h1>
+    <p class="hero-subtitle">
+      I work at the intersection of IT operations, endpoint security, and hands-on labs.
+      I care less about buzzwords and more about clear processes, sane access control,
+      and systems that don’t fall apart under basic pressure.
+    </p>
+
+    <div class="hero-meta">
+      <span>South Jersey</span>
+      <span>Cybersecurity student</span>
+      <span>Interested in SOC / vuln mgmt / appsec</span>
+    </div>
+
+    <div class="hero-actions">
+      <a href="#projects" class="btn-primary">View projects</a>
+      <a href="#contact" class="btn-ghost">Contact</a>
+    </div>
+  </section>
+
+  <!-- ABOUT -->
+  <section id="about">
+    <h2 class="section-title">About</h2>
+    <p class="section-subtitle">
+      A quick snapshot of what I actually do and how I think.
+    </p>
+
+    <div class="grid-2">
+      <div>
+        <p>
+          I work in IT and study cybersecurity, focused on practical skills:
+          network / service enumeration, endpoint security, and privilege escalation
+          in controlled lab environments.
+        </p>
+        <p>
+          In my current role I manage endpoints, respond to alerts, and write
+          documentation so processes are repeatable instead of improvised.
+          On my own time I work through labs and retired boxes, aiming for a
+          solid foundation for SOC, analyst, or vulnerability management roles.
+        </p>
+        <p>
+          I care about signal over noise: meaningful logging, reasonable access,
+          and documentation that someone can actually follow at 3 a.m.
+        </p>
+      </div>
+
+      <div class="card">
+        <strong>Core skills</strong>
+        <div class="chip-row">
+          <span class="chip">Endpoint security (CrowdStrike)</span>
+          <span class="chip">Windows / Linux fundamentals</span>
+          <span class="chip">Network & service enumeration</span>
+          <span class="chip">SOPs & documentation</span>
+          <span class="chip">Basic web app / infra understanding</span>
+        </div>
+
+        <strong style="display:block; margin-top:0.9rem;">Currently focused on</strong>
+        <div class="chip-row">
+          <span class="chip">Privilege escalation (Win / Linux)</span>
+          <span class="chip">Vuln management workflows</span>
+          <span class="chip">Scripting & automation</span>
+          <span class="chip">SOC-style analysis</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- PROJECTS -->
+  <section id="projects">
+    <h2 class="section-title">Selected projects & work</h2>
+    <p class="section-subtitle">
+      A few things that show how I actually approach problems, not just what tools I can name.
+    </p>
+
+    <ul class="project-list">
+      <li class="project-item">
+        <div class="project-title">Internal endpoint security tuning</div>
+        <div class="project-meta">
+          Role: Information Technology Associate · Stack: CrowdStrike, Windows
+        </div>
+        <p class="project-desc">
+          Helped tune endpoint policies and triage alerts in a live environment.
+          Wrote SOPs for common detection patterns and normalized how tickets
+          were handled so incidents stopped being one-off improvisations.
+        </p>
+        <p class="project-desc">
+          <strong>Impact:</strong> clearer handling of noisy alerts,
+          fewer repeats of the same questions, and more consistent security coverage.
+        </p>
+      </li>
+
+      <li class="project-item">
+        <div class="project-title">Retired HTB & lab work</div>
+        <div class="project-meta">
+          Personal · Stack: Nmap, Linux tooling, web testing basics
+        </div>
+        <p class="project-desc">
+          Built a repeatable methodology for boxes and labs: enumerate services,
+          map attack surface, test misconfigurations, and carefully document each
+          step instead of guessing until something works.
+        </p>
+        <p class="project-desc">
+          <strong>Focus:</strong> process and understanding over “lucky hits,” with
+          notes written as if a teammate had to reproduce everything from scratch.
+        </p>
+      </li>
+
+      <li class="project-item">
+        <div class="project-title">PCI-related documentation & workflows</div>
+        <div class="project-meta">
+          Role: Information Technology Associate · Stack: docs, diagrams, device tracking
+        </div>
+        <p class="project-desc">
+          Drafted language and templates to support access reviews, targeted risk
+          analysis, and device acknowledgment / tracking workflows. Focused on
+          making them short, accurate, and usable by non-technical staff.
+        </p>
+        <p class="project-desc">
+          <strong>Impact:</strong> fewer gaps in the paper trail and less confusion
+          when someone actually needs to verify who has what and why.
+        </p>
+      </li>
+    </ul>
+  </section>
+
+  <!-- EXPERIENCE -->
+  <section id="experience">
+    <h2 class="section-title">Experience</h2>
+    <p class="section-subtitle">
+      Roles and work that shaped how I approach security and operations.
+    </p>
+
+    <ul class="timeline">
+      <li class="timeline-item">
+        <div class="timeline-role">Information Technology Associate</div>
+        <div class="timeline-org">Investview Inc.</div>
+        <div class="timeline-meta">2024 – Present · Remote / Hybrid</div>
+        <p>
+          Manage and monitor endpoints with CrowdStrike Falcon, support device
+          lifecycle and access-related paperwork, and handle user issues with
+          an eye on security implications instead of just “making it work”.
+        </p>
+      </li>
+
+      <li class="timeline-item">
+        <div class="timeline-role">Cybersecurity / IT projects (self-directed)</div>
+        <div class="timeline-org">Labs & training</div>
+        <div class="timeline-meta">Ongoing</div>
+        <p>
+          Work through pentesting material, HTB-style labs, and structured
+          exercises. Practice enumeration, exploitation, and escalation on safe
+          targets while documenting findings as if writing an internal KB.
+        </p>
+      </li>
+    </ul>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact">
+    <h2 class="section-title">Contact</h2>
+    <p class="section-subtitle">
+      For security, IT, or junior analyst roles that value hands-on learning and clear thinking.
+    </p>
+
+    <div class="card">
+      <p>
+        I’m interested in roles where I can combine IT fundamentals with security work:
+        SOC, endpoint security, vulnerability management, or junior analyst positions.
+      </p>
+      <p>
+        If you need someone who actually cares about doing things correctly, writing
+        things down, and improving the process over time, reach out.
+      </p>
+
+      <ul class="contact-list">
+        <li>
+          <div class="contact-label">Email</div>
+          <div class="contact-value">
+            <a href="mailto:youremail@example.com">youremail@example.com</a>
+          </div>
+        </li>
+        <li>
+          <div class="contact-label">LinkedIn</div>
+          <div class="contact-value">
+            <a href="https://www.linkedin.com/in/your-handle" target="_blank" rel="noreferrer">
+              linkedin.com/in/your-handle
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="contact-label">GitHub</div>
+          <div class="contact-value">
+            <a href="https://github.com/your-handle" target="_blank" rel="noreferrer">
+              github.com/your-handle
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="contact-label">Location</div>
+          <div class="contact-value">South Jersey, USA</div>
+        </li>
+      </ul>
+    </div>
+  </section>
+</div>
