--- a/index.html
+++ b/index.html
@@ -220,25 +220,26 @@ title: Home
 
 <div class="portfolio">
   <!-- HERO -->
-  <section class="hero" id="top">
+  <section class="hero">
     <div class="hero-eyebrow">Portfolio</div>
     <h1 class="hero-title">
-      James Sacharanski · <span>Security-focused IT & aspiring pentester</span>
+      James Sacharanski · <span>Security-Focused IT & Aspiring Pentester</span>
     </h1>
+
     <p class="hero-subtitle">
-      Security-focused IT professional with hands-on experience in endpoint security,
-      penetration testing, and supporting enterprise systems. Strong at finding issues,
-      tightening workflows, and making security changes stick.
+      IT and security professional with hands-on experience in endpoint security,
+      penetration testing, and supporting enterprise systems. Strong at identifying issues,
+      improving workflows, and implementing security controls that actually stick.
     </p>
 
     <div class="hero-meta">
       <span>South Jersey</span>
       <span>Information Technology Associate @ Investview Inc.</span>
-      <span>Cybersecurity M.S. student · Rowan University</span>
+      <span>Cybersecurity M.S. Student · Rowan University</span>
     </div>
 
     <div class="hero-actions">
-      <a href="#projects" class="btn-primary">View projects</a>
+      <a href="#projects" class="btn-primary">View Projects</a>
       <a href="#experience" class="btn-ghost">Experience</a>
       <a href="#contact" class="btn-ghost">Contact</a>
     </div>
@@ -247,44 +248,43 @@ title: Home
   <!-- ABOUT -->
   <section id="about">
     <h2 class="section-title">About</h2>
-    <p class="section-subtitle">
-      How I work and what I actually bring to a security or IT team.
-    </p>
+    <p class="section-subtitle">What I do and how I work.</p>
 
     <div class="grid-2">
       <div>
         <p>
-          I work across IT operations and security: managing enterprise endpoints,
-          supporting users, and tightening how things are done so there’s less chaos.
+          I work at the intersection of IT operations and security. My day-to-day includes
+          managing enterprise endpoints, supporting users, and tightening internal processes
+          so systems break less and security improves naturally.
         </p>
         <p>
-          At Investview, I manage CrowdStrike Falcon (policy configuration,
-          host groups, alert triage, visibility tuning) while handling provisioning,
-          asset inventory, and lifecycle tracking across hardware and software.
+          At Investview, I manage CrowdStrike Falcon (policy configuration, host groups,
+          alert triage, and visibility tuning), asset lifecycle tracking, software provisioning,
+          and Jira Service Management workflows.
         </p>
         <p>
-          Outside of work, I focus on practical security skills through labs:
-          enumeration, privilege escalation, and structured documentation of findings.
+          Outside of work, I focus on practical security skills through structured pentesting
+          labs: enumeration, exploitation, and privilege escalation in controlled environments.
         </p>
       </div>
 
       <div class="card">
-        <strong>Core skills</strong>
+        <strong>Core Skills</strong>
         <div class="chip-row">
-          <span class="chip">CrowdStrike Falcon (policy & triage)</span>
-          <span class="chip">Endpoint security & visibility tuning</span>
-          <span class="chip">Asset inventory & lifecycle tracking</span>
-          <span class="chip">Jira Service Management workflows</span>
-          <span class="chip">Google Workspace / M365 mail & DNS</span>
-          <span class="chip">SOPs, DR & business continuity docs</span>
+          <span class="chip">CrowdStrike Falcon</span>
+          <span class="chip">Endpoint Security</span>
+          <span class="chip">Asset Lifecycle</span>
+          <span class="chip">Jira Service Management</span>
+          <span class="chip">Google Workspace / M365</span>
+          <span class="chip">SOP / DR / BCP Documentation</span>
         </div>
 
-        <strong style="display:block; margin-top:0.9rem;">Current focus</strong>
+        <strong style="display:block; margin-top:0.9rem;">Current Focus</strong>
         <div class="chip-row">
-          <span class="chip">Privilege escalation (Win & Linux)</span>
-          <span class="chip">Vulnerability management workflows</span>
-          <span class="chip">SOC-style analysis</span>
-          <span class="chip">Automation & scripting</span>
+          <span class="chip">Privilege Escalation</span>
+          <span class="chip">Vulnerability Management</span>
+          <span class="chip">Security Analysis</span>
+          <span class="chip">Automation & Scripting</span>
         </div>
       </div>
     </div>
@@ -292,65 +292,55 @@ title: Home
 
   <!-- PROJECTS -->
   <section id="projects">
-    <h2 class="section-title">Selected projects & work</h2>
-    <p class="section-subtitle">
-      A few concrete examples of how I think and what I’ve actually shipped.
-    </p>
+    <h2 class="section-title">Selected Projects</h2>
+    <p class="section-subtitle">Work that shows how I think and what I deliver.</p>
 
     <ul class="project-list">
       <li class="project-item">
-        <div class="project-title">Enterprise endpoint security & alert triage</div>
+        <div class="project-title">Enterprise Endpoint Security & Alert Triage</div>
         <div class="project-meta">
           Information Technology Associate · Investview Inc. · CrowdStrike Falcon
         </div>
         <p class="project-desc">
-          Manage enterprise endpoint security using CrowdStrike Falcon: policy configuration,
-          host groups, alert triage, and tuning. Developed consistent triage workflows to filter
-          noise and surface real threats.
+          Manage enterprise endpoint security including policy configuration, host grouping,
+          alert triage, and tuning. Built consistent triage workflows to reduce noise and
+          surface meaningful detections.
         </p>
       </li>
 
       <li class="project-item">
-        <div class="project-title">Jira Service Management onboarding</div>
-        <div class="project-meta">
-          IT Associate · Jira Service Management
-        </div>
+        <div class="project-title">Jira Service Management Onboarding</div>
+        <div class="project-meta">IT Associate · Investview Inc.</div>
         <p class="project-desc">
-          Built the onboarding portal, approvals, and user-group logic in JSM.
-          Structured workflows so they actually reflect business processes.
+          Designed and maintained onboarding and approval workflows in Jira Service Management,
+          ensuring accurate provisioning and cleaner internal processes.
         </p>
       </li>
 
       <li class="project-item">
-        <div class="project-title">Microsoft 365 → Google Workspace migration</div>
-        <div class="project-meta">
-          DNS · SPF/DKIM/DMARC · Routing
-        </div>
+        <div class="project-title">Microsoft 365 → Google Workspace Migration</div>
+        <div class="project-meta">DNS · SPF/DKIM/DMARC · Routing</div>
         <p class="project-desc">
-          Led the migration including SPF/DKIM/DMARC, routing, domain verification,
-          archiving, and user transition.
+          Led the company-wide migration, handling email authentication, routing, domain
+          verification, archiving, and user transition.
         </p>
       </li>
 
       <li class="project-item">
-        <div class="project-title">PCI DSS 4.0 readiness</div>
-        <div class="project-meta">
-          Compliance Officer · ESD Inc.
-        </div>
+        <div class="project-title">PCI DSS 4.0 Readiness</div>
+        <div class="project-meta">Compliance Officer · ESD Inc.</div>
         <p class="project-desc">
-          Performed access reviews, documented risks, organized evidence, and prepared
-          materials for QSA review.
+          Performed access reviews, organized evidence, drafted assessments, and prepared
+          audit-ready documentation for QSA review.
         </p>
       </li>
 
       <li class="project-item">
-        <div class="project-title">Penetration Testing (FAA-related)</div>
-        <div class="project-meta">
-          Penetration Tester (Intern) · LS Technologies
-        </div>
+        <div class="project-title">Penetration Testing Internship</div>
+        <div class="project-meta">LS Technologies</div>
         <p class="project-desc">
-          Tested FAA-related internal applications, wrote findings with repro steps and
-          impact, and assisted senior engineers with lab configuration.
+          Conducted penetration testing on FAA-related internal applications and documented
+          findings with clear reproduction steps and impact analysis.
         </p>
       </li>
     </ul>
@@ -359,9 +349,7 @@ title: Home
   <!-- EXPERIENCE -->
   <section id="experience">
     <h2 class="section-title">Experience</h2>
-    <p class="section-subtitle">
-      Roles that shaped how I approach security, operations, and documentation.
-    </p>
+    <p class="section-subtitle">Roles that shaped my approach to IT and security.</p>
 
     <ul class="timeline">
       <li class="timeline-item">
@@ -369,8 +357,8 @@ title: Home
         <div class="timeline-org">Investview Inc.</div>
         <div class="timeline-meta">2025 – Present</div>
         <p>
-          CrowdStrike Falcon administration (policy, triage, tuning), provisioning,
-          asset lifecycle, Google Workspace migration, and Jira Service Management automation.
+          CrowdStrike administration, provisioning, asset lifecycle tracking, Google Workspace
+          migration, and Jira Service Management automation.
         </p>
       </li>
 
@@ -379,7 +367,7 @@ title: Home
         <div class="timeline-org">ESD Inc.</div>
         <div class="timeline-meta">2024</div>
         <p>
-          PCI DSS 4.0 evidence preparation, access reviews, and risk assessments.
+          PCI DSS 4.0 evidence preparation, access reviews, and risk assessment documentation.
         </p>
       </li>
 
@@ -388,7 +376,7 @@ title: Home
         <div class="timeline-org">LS Technologies</div>
         <div class="timeline-meta">2023</div>
         <p>
-          Performed penetration testing on FAA-related systems and documented findings clearly.
+          Performed penetration testing on FAA-related systems and produced actionable reports.
         </p>
       </li>
     </ul>
@@ -397,9 +385,7 @@ title: Home
   <!-- CONTACT -->
   <section id="contact">
     <h2 class="section-title">Contact</h2>
-    <p class="section-subtitle">
-      For security, IT, or analyst roles where practical work and clear thinking matter.
-    </p>
+    <p class="section-subtitle">For roles involving IT, security, or analysis.</p>
 
     <div class="card">
       <ul class="contact-list">
@@ -433,4 +419,3 @@ title: Home
     </div>
   </section>
 </div>
-
