--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: Home
 }
 
 .hero-title {
-  font-size: 1.7rem;
+  font-size: 1.8rem;
   margin: 0 0 0.5rem 0;
 }
 
@@ -135,61 +135,45 @@ title: Home
   margin: 0 0.3rem 0.3rem 0;
 }
 
-/* Projects */
-.project-list {
+/* Lists */
+.item-list {
   list-style: none;
   padding-left: 0;
   margin: 0;
 }
 
-.project-item {
+.item {
   border: 1px solid #116611;
   padding: 0.9rem 1rem;
   margin-bottom: 0.8rem;
   background: #020b02;
 }
 
-.project-title {
+.item-title {
   font-weight: bold;
   margin-bottom: 0.2rem;
 }
 
-.project-meta {
+.item-meta {
   font-size: 0.8rem;
   color: #9ad39a;
   margin-bottom: 0.4rem;
 }
 
-.project-desc {
+.item-desc {
   font-size: 0.9rem;
   margin-bottom: 0.3rem;
 }
 
-/* Experience timeline */
-.timeline {
+/* Experience snapshot */
+.snapshot-list {
   list-style: none;
   padding-left: 0;
   margin: 0;
+  font-size: 0.9rem;
 }
 
-.timeline-item {
-  border-left: 2px solid #00ff00;
-  padding-left: 0.8rem;
-  margin-bottom: 1.3rem;
-}
-
-.timeline-role {
-  font-weight: bold;
-}
-
-.timeline-org {
-  font-size: 0.85rem;
-  color: #9ad39a;
-}
-
-.timeline-meta {
-  font-size: 0.8rem;
-  color: #8f8f8f;
+.snapshot-list li {
   margin-bottom: 0.4rem;
 }
 
@@ -221,171 +205,177 @@ title: Home
 <div class="portfolio">
   <!-- HERO -->
   <section class="hero">
-    <div class="hero-eyebrow">Portfolio</div>
+    <div class="hero-eyebrow">Blog & Portfolio</div>
     <h1 class="hero-title">
-      James Sacharanski · <span>Security-Focused IT & Aspiring Pentester</span>
+      Hi, I’m James. <span>I break and harden systems for a living.</span>
     </h1>
 
     <p class="hero-subtitle">
-      IT and security professional with hands-on experience in endpoint security,
-      penetration testing, and supporting enterprise systems. Strong at identifying issues,
-      improving workflows, and implementing security controls that actually stick.
+      I work in IT and security, spend too much time in labs, and try to turn
+      that into something useful: better defenses, clearer processes, and fewer
+      “why did no one write this down?” moments.
     </p>
 
     <div class="hero-meta">
-      <span>South Jersey</span>
       <span>Information Technology Associate @ Investview Inc.</span>
       <span>Cybersecurity M.S. Student · Rowan University</span>
+      <span>Based in South Jersey</span>
     </div>
 
     <div class="hero-actions">
-      <a href="#projects" class="btn-primary">View Projects</a>
-      <a href="#experience" class="btn-ghost">Experience</a>
-      <a href="#contact" class="btn-ghost">Contact</a>
+      <a href="#posts" class="btn-primary">Read notes & posts</a>
+      <a href="#projects" class="btn-ghost">View labs & projects</a>
+      <a href="#contact" class="btn-ghost">Get in touch</a>
     </div>
   </section>
 
-  <!-- ABOUT -->
+  <!-- ABOUT / WHAT THIS SITE IS -->
   <section id="about">
-    <h2 class="section-title">About</h2>
-    <p class="section-subtitle">What I do and how I work.</p>
+    <h2 class="section-title">What this site is</h2>
+    <p class="section-subtitle">
+      Part portfolio, part lab notebook, part place to dump things I don’t want to forget.
+    </p>
 
     <div class="grid-2">
       <div>
         <p>
-          I work at the intersection of IT operations and security. My day-to-day includes
-          managing enterprise endpoints, supporting users, and tightening internal processes
-          so systems break less and security improves naturally.
+          I work across IT operations and security: endpoint management, access,
+          onboarding, and the kind of glue work that keeps everything from
+          falling apart quietly in the background.
         </p>
         <p>
-          At Investview, I manage CrowdStrike Falcon (policy configuration, host groups,
-          alert triage, and visibility tuning), asset lifecycle tracking, software provisioning,
-          and Jira Service Management workflows.
+          On the security side, I spend time in labs practicing enumeration,
+          exploitation, and privilege escalation in controlled environments.
+          The goal is to build instincts that carry over into real systems,
+          not just collect tool names.
         </p>
         <p>
-          Outside of work, I focus on practical security skills through structured pentesting
-          labs: enumeration, exploitation, and privilege escalation in controlled environments.
+          This site is where I collect writeups, small projects, and notes from
+          that work. Some of it is polished, some of it is just “this worked, here’s why.”
         </p>
       </div>
 
       <div class="card">
-        <strong>Core Skills</strong>
+        <strong>What I’m working with</strong>
         <div class="chip-row">
           <span class="chip">CrowdStrike Falcon</span>
-          <span class="chip">Endpoint Security</span>
-          <span class="chip">Asset Lifecycle</span>
+          <span class="chip">Endpoint security</span>
+          <span class="chip">Windows / Linux</span>
           <span class="chip">Jira Service Management</span>
           <span class="chip">Google Workspace / M365</span>
-          <span class="chip">SOP / DR / BCP Documentation</span>
         </div>
 
-        <strong style="display:block; margin-top:0.9rem;">Current Focus</strong>
+        <strong style="display:block; margin-top:0.9rem;">What I’m focusing on</strong>
         <div class="chip-row">
-          <span class="chip">Privilege Escalation</span>
-          <span class="chip">Vulnerability Management</span>
-          <span class="chip">Security Analysis</span>
-          <span class="chip">Automation & Scripting</span>
+          <span class="chip">Privilege escalation labs</span>
+          <span class="chip">Vulnerability management workflows</span>
+          <span class="chip">Log signal vs noise</span>
+          <span class="chip">Automation & small scripts</span>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- PROJECTS -->
-  <section id="projects">
-    <h2 class="section-title">Selected Projects</h2>
-    <p class="section-subtitle">Work that shows how I think and what I deliver.</p>
+  <!-- NOTES / POSTS -->
+  <section id="posts">
+    <h2 class="section-title">Notes & posts</h2>
+    <p class="section-subtitle">
+      Short writeups, lab notes, and half-rants about things I’m learning or breaking.
+    </p>
 
-    <ul class="project-list">
-      <li class="project-item">
-        <div class="project-title">Enterprise Endpoint Security & Alert Triage</div>
-        <div class="project-meta">
-          Information Technology Associate · Investview Inc. · CrowdStrike Falcon
-        </div>
-        <p class="project-desc">
-          Manage enterprise endpoint security including policy configuration, host grouping,
-          alert triage, and tuning. Built consistent triage workflows to reduce noise and
-          surface meaningful detections.
+    <ul class="item-list">
+      <!-- These are placeholders; point them at real posts when you create them -->
+      <li class="item">
+        <div class="item-title">Building a repeatable enumeration flow</div>
+        <div class="item-meta">Lab notes · Network & service discovery</div>
+        <p class="item-desc">
+          How I go from “open ports” to a structured map of services, versions,
+          and likely attack paths, without just throwing tools at the problem.
+        </p>
+        <!-- <a href="/posts/enumeration-flow.html">Read more →</a> -->
+      </li>
+
+      <li class="item">
+        <div class="item-title">Keeping endpoint alerts useful instead of noisy</div>
+        <div class="item-meta">Ops & security · CrowdStrike Falcon</div>
+        <p class="item-desc">
+          Thoughts on alert triage, false positives, and documenting patterns so
+          the next person doesn’t start from zero every time.
         </p>
       </li>
 
-      <li class="project-item">
-        <div class="project-title">Jira Service Management Onboarding</div>
-        <div class="project-meta">IT Associate · Investview Inc.</div>
-        <p class="project-desc">
-          Designed and maintained onboarding and approval workflows in Jira Service Management,
-          ensuring accurate provisioning and cleaner internal processes.
-        </p>
-      </li>
-
-      <li class="project-item">
-        <div class="project-title">Microsoft 365 → Google Workspace Migration</div>
-        <div class="project-meta">DNS · SPF/DKIM/DMARC · Routing</div>
-        <p class="project-desc">
-          Led the company-wide migration, handling email authentication, routing, domain
-          verification, archiving, and user transition.
-        </p>
-      </li>
-
-      <li class="project-item">
-        <div class="project-title">PCI DSS 4.0 Readiness</div>
-        <div class="project-meta">Compliance Officer · ESD Inc.</div>
-        <p class="project-desc">
-          Performed access reviews, organized evidence, drafted assessments, and prepared
-          audit-ready documentation for QSA review.
-        </p>
-      </li>
-
-      <li class="project-item">
-        <div class="project-title">Penetration Testing Internship</div>
-        <div class="project-meta">LS Technologies</div>
-        <p class="project-desc">
-          Conducted penetration testing on FAA-related internal applications and documented
-          findings with clear reproduction steps and impact analysis.
+      <li class="item">
+        <div class="item-title">Doing compliance work without losing your mind</div>
+        <div class="item-meta">Process · PCI-ish sanity</div>
+        <p class="item-desc">
+          Notes from helping with PCI DSS readiness and access reviews:
+          what actually helped, what was just noise, and how to make the
+          paperwork hurt less.
         </p>
       </li>
     </ul>
   </section>
 
-  <!-- EXPERIENCE -->
-  <section id="experience">
-    <h2 class="section-title">Experience</h2>
-    <p class="section-subtitle">Roles that shaped my approach to IT and security.</p>
+  <!-- LABS / PROJECTS -->
+  <section id="projects">
+    <h2 class="section-title">Labs & projects</h2>
+    <p class="section-subtitle">
+      A few things that are more “work in progress” than “perfect case study.”
+    </p>
 
-    <ul class="timeline">
-      <li class="timeline-item">
-        <div class="timeline-role">Information Technology Associate</div>
-        <div class="timeline-org">Investview Inc.</div>
-        <div class="timeline-meta">2025 – Present</div>
-        <p>
-          CrowdStrike administration, provisioning, asset lifecycle tracking, Google Workspace
-          migration, and Jira Service Management automation.
+    <ul class="item-list">
+      <li class="item">
+        <div class="item-title">Enterprise endpoint security tuning</div>
+        <div class="item-meta">Investview Inc. · CrowdStrike Falcon</div>
+        <p class="item-desc">
+          Tuning policies, improving host grouping, and building simple triage workflows
+          so Falcon alerts are actually usable instead of overwhelming.
         </p>
       </li>
 
-      <li class="timeline-item">
-        <div class="timeline-role">Compliance Officer (Contract)</div>
-        <div class="timeline-org">ESD Inc.</div>
-        <div class="timeline-meta">2024</div>
-        <p>
-          PCI DSS 4.0 evidence preparation, access reviews, and risk assessment documentation.
+      <li class="item">
+        <div class="item-title">Structured pentesting labs</div>
+        <div class="item-meta">Personal · Lab environments</div>
+        <p class="item-desc">
+          Working through exploitation and privilege escalation labs with an emphasis on
+          note-taking, repeatability, and understanding why something worked instead of
+          just copying payloads.
         </p>
       </li>
 
-      <li class="timeline-item">
-        <div class="timeline-role">Penetration Tester (Intern)</div>
-        <div class="timeline-org">LS Technologies</div>
-        <div class="timeline-meta">2023</div>
-        <p>
-          Performed penetration testing on FAA-related systems and produced actionable reports.
+      <li class="item">
+        <div class="item-title">Mail & identity migration</div>
+        <div class="item-meta">Investview Inc. · Microsoft 365 → Google Workspace</div>
+        <p class="item-desc">
+          DNS and mail migration work: SPF/DKIM/DMARC, routing, archiving, and user cutover,
+          with a focus on minimizing chaos for everyone else.
         </p>
       </li>
     </ul>
+  </section>
+
+  <!-- EXPERIENCE SNAPSHOT -->
+  <section id="experience">
+    <h2 class="section-title">Experience snapshot</h2>
+    <p class="section-subtitle">
+      If you care about titles and timelines.
+    </p>
+
+    <div class="card">
+      <ul class="snapshot-list">
+        <li><strong>Information Technology Associate</strong> · Investview Inc. (2025 – Present)</li>
+        <li><strong>Compliance Officer (Contract)</strong> · ESD Inc. (2024)</li>
+        <li><strong>Penetration Tester (Intern)</strong> · LS Technologies (2023)</li>
+      </ul>
+    </div>
   </section>
 
   <!-- CONTACT -->
   <section id="contact">
     <h2 class="section-title">Contact</h2>
-    <p class="section-subtitle">For roles involving IT, security, or analysis.</p>
+    <p class="section-subtitle">
+      For security, IT, or analyst roles — or if you just want to talk about breaking things safely.
+    </p>
 
     <div class="card">
       <ul class="contact-list">
